# FinCore

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/account/: exceptions.py  models.py  repo.py  schemas.py  services.py
app/auth/: deps.py  models.py  repo.py  routers.py  schemas.py  security.py  services.py  types.py
app/core/: config.py  constraint_registry.py  database.py  deps.py  error_handlers.py  exceptions.py  listeners.py  logger.py  middleware.py  models.py  repo.py  scheduler.py  schemas.py  transaction_manager.py
app/payment/: exceptions.py  models.py  repo.py  routers.py  schemas.py  service.py
app/user/: exceptions.py  models.py  repo.py  routers.py  schemas.py  service.py
app/webhook/: schemas.py
migrations/: env.py
migrations/versions/: 09ba544ceceb_create_initial_tables.py  6788aae3e786_add_test_users.py  82246d206c50_create_initial_tables.py  8d27372d3963_create_initial_tables.py  9bd6b2d7d919_add_test_users.py
