[project]
name = "fin-core"
authors = [{name = "light181", email = "danil.odinzov181@gmail.com"}]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sanic",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "pyjwt",
    "python-dotenv",
]